Add 2 column view for larger screens

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 	<head>
 		<link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
-		<link rel="stylesheet" href="styles.css">
 		<link rel="stylesheet" href="font-styling.css">
+		<link rel="stylesheet" href="styles.css">
 	</head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<body>
@@ -26,12 +26,13 @@
 					</blockquote>
 				</header>
 
-				<section>
-					<h3>Projects</h3>
+				<h2>Projects</h2>
+				<hr>
+				<section class="project-container">
 					<div class="project-item">
-						<h4>Twist The Web Clone</h4>
-						<a href="https://ttw-clone.herokuapp.com/" class="project-link">Live Demo</a>
-						<img src="https://github.com/V-Wong/TTW-Clone/raw/master/cover.png">
+						<h3>Twist The Web Clone</h3>
+						<a href="https://ttw-clone.herokuapp.com/" >Live Demo</a>
+						<img class="project-image" src="https://github.com/V-Wong/TTW-Clone/raw/master/cover.png">
 						<ul>
 							<li>
 								A web based social speedsolving website based on the now defunct Twist The Web.
@@ -50,9 +51,9 @@
 					</div>
 
 					<div class="project-item">
-						<h4>CubeSim</h4>
-						<a href="https://github.com/V-Wong/TTW-Clone" class="project-link">Respository</a>
-						<img src="https://raw.githubusercontent.com/V-Wong/CubeSim/master/cover.png">
+						<h3>CubeSim</h3>
+						<a href="https://github.com/V-Wong/TTW-Clone" >Respository</a>
+						<img class="project-image" src="https://raw.githubusercontent.com/V-Wong/CubeSim/master/cover.png">
 						<ul>
 							<li>
 								A Rubiks cube simulation and solving tool.
@@ -64,9 +65,9 @@
 					</div>
 
 					<div class="project-item">
-						<h4>Huffman Encoding</h4>
-						<a href="https://github.com/V-Wong/Huffman-Encoding" class="project-link">Respository</a>
-						<img src="https://github.com/V-Wong/Huffman-Encoding/raw/master/screenshot.png?raw=true">
+						<h3>Huffman Encoding</h3>
+						<a href="https://github.com/V-Wong/Huffman-Encoding">Respository</a>
+						<img class="project-image" src="https://github.com/V-Wong/Huffman-Encoding/raw/master/screenshot.png?raw=true">
 						<ul>
 							<li>
 								A web based visualisation tool for the Huffman Encoding algorithm.
@@ -74,6 +75,21 @@
 							<li>
 								Accepts user input for the probability of given symbols and generates
 								the Huffman Tree formed and the encoding of the symbols.
+							</li>
+						</ul>
+					</div>
+
+					<div class="project-item">
+						<h3>Projectile Simulator</h3>
+						<a href="https://github.com/V-Wong/Projectile-Simulator">Respository</a>
+						<img class="project-image" src="https://v-wong.github.io/img/tanks.png">
+						<ul>
+							<li>
+								A web based projectile simulation tool based on the motion of a tank missile.
+							</li>
+							<li>
+								Users can use the keyboard controls to move their tank and adjust the power and
+								angle of their missile shot.
 							</li>
 						</ul>
 					</div>
