--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
 					<blockquote class="about-me">
 						<p>
 							Current student of Computer Science and Mathematics at the University of New South Wales in Sydney.
-						  Interested in web development and app development.
+						</p>
+						<p>
+							Interested in full stack web development and mobile app development.
+						</p>
+						<p>
+							Have experience programming in Javascript (Typescript) and Python.
 						</p>
 					</blockquote>
 				</header>
@@ -31,7 +36,8 @@
 				<section class="project-container">
 					<div class="project-item">
 						<h3>Twist The Web Clone</h3>
-						<a href="https://ttw-clone.herokuapp.com/" >Live Demo</a>
+						<a class="demo-link" href="https://ttw-clone.herokuapp.com/">Live Demo</a>
+						<a class="repo-link" href="https://github.com/V-Wong/CubeSim">Repository</a>
 						<img class="project-image" src="https://github.com/V-Wong/TTW-Clone/raw/master/cover.png">
 						<ul>
 							<li>
@@ -52,7 +58,7 @@
 
 					<div class="project-item">
 						<h3>CubeSim</h3>
-						<a href="https://github.com/V-Wong/TTW-Clone" >Respository</a>
+						<a class="repo-link" href="https://github.com/V-Wong/CubeSim">Respository</a>
 						<img class="project-image" src="https://raw.githubusercontent.com/V-Wong/CubeSim/master/cover.png">
 						<ul>
 							<li>
@@ -66,7 +72,8 @@
 
 					<div class="project-item">
 						<h3>Huffman Encoding</h3>
-						<a href="https://github.com/V-Wong/Huffman-Encoding">Respository</a>
+						<a class="demo-link" href="https://github.com/V-Wong/CubeSim">Live Demo</a>
+						<a class="repo-link" href="https://github.com/V-Wong/Huffman-Encoding">Respository</a>
 						<img class="project-image" src="https://github.com/V-Wong/Huffman-Encoding/raw/master/screenshot.png?raw=true">
 						<ul>
 							<li>
@@ -81,7 +88,8 @@
 
 					<div class="project-item">
 						<h3>Projectile Simulator</h3>
-						<a href="https://github.com/V-Wong/Projectile-Simulator">Respository</a>
+						<a class="demo-link" href="https://github.com/V-Wong/Projectile-Simulator">Live Demo</a>
+						<a class="repo-link" href="https://github.com/V-Wong/Projectile-Simulator">Respository</a>
 						<img class="project-image" src="https://v-wong.github.io/img/tanks.png">
 						<ul>
 							<li>
