Fix demo and repo links

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					<div class="project-item">
 						<h3>Twist The Web Clone</h3>
 						<a class="demo-link" href="https://ttw-clone.herokuapp.com/">Live Demo</a>
-						<a class="repo-link" href="https://github.com/V-Wong/CubeSim">Repository</a>
+						<a class="repo-link" href="https://github.com/V-Wong/TTW-Clone">Repository</a>
 						<img class="project-image" src="https://github.com/V-Wong/TTW-Clone/raw/master/cover.png">
 						<ul>
 							<li>
@@ -72,7 +72,7 @@
 
 					<div class="project-item">
 						<h3>Huffman Encoding</h3>
-						<a class="demo-link" href="https://github.com/V-Wong/CubeSim">Live Demo</a>
+						<a class="demo-link" href="https://github.com/V-Wong/Huffman-Encoding">Live Demo</a>
 						<a class="repo-link" href="https://github.com/V-Wong/Huffman-Encoding">Respository</a>
 						<img class="project-image" src="https://github.com/V-Wong/Huffman-Encoding/raw/master/screenshot.png?raw=true">
 						<ul>
@@ -88,7 +88,7 @@
 
 					<div class="project-item">
 						<h3>Projectile Simulator</h3>
-						<a class="demo-link" href="https://github.com/V-Wong/Projectile-Simulator">Live Demo</a>
+						<a class="demo-link" href="https://v-wong.github.io/Projectile-Simulator/">Live Demo</a>
 						<a class="repo-link" href="https://github.com/V-Wong/Projectile-Simulator">Respository</a>
 						<img class="project-image" src="https://v-wong.github.io/img/tanks.png">
 						<ul>
