Update project descriptions

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
 							<li>
 								Each lobby includes a chatroom for which users can discuss their solves in.
 							</li>
+							<li>
+								Backend built in Python with Flask-Socketio and using MongoDB. Frontend built in Typescript with React.
+							</li>
 						</ul>
 					</div>
 
@@ -65,7 +68,13 @@
 								A Rubiks cube simulation and solving tool.
 							</li>
 							<li>
-								Built in Python with Pygame.
+								Gives users keyboard control of the cube with a 2D rendering of the faces.
+							</li>
+							<li>
+								Implements the beginner's method of solving the cube.
+							</li>
+							<li>
+								Built in Python with Pygame for visuals and controls.
 							</li>
 						</ul>
 					</div>
@@ -83,6 +92,12 @@
 								Accepts user input for the probability of given symbols and generates
 								the Huffman Tree formed and the encoding of the symbols.
 							</li>
+							<li>
+								A specific encoding can be selected and the traceback of the encoding path drawn.
+							</li>
+							<li>
+								Built in Javascript with the use of HTML5 Canvas for visuals.
+							</li>
 						</ul>
 					</div>
 
@@ -98,6 +113,12 @@
 							<li>
 								Users can use the keyboard controls to move their tank and adjust the power and
 								angle of their missile shot.
+							</li>
+							<li>
+								A moving target is also featured in which the user can shoot to score points.
+							</li>
+							<li>
+								Built in Javascript with the use of HTML5 Canvas for visuals.
 							</li>
 						</ul>
 					</div>
