Update personal description

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 					</nav>
 					<blockquote class="about-me">
 						<p>
-							Current student of Computer Science and Mathematics at the University of New South Wales in Sydney.
+							Student of Computer Science and Mathematics at the University of New South Wales in Sydney.
 						</p>
 						<p>
 							Interested in full stack web development and mobile app development.
 						</p>
 						<p>
-							Have experience programming in Javascript (Typescript) and Python.
+							Expererienced in programming with Javascript (Typescript) and Python.
 						</p>
 					</blockquote>
 				</header>
