--- a/index.html
+++ b/index.html
@@ -125,5 +125,8 @@
 					</div>
 				</section>
 		</div>
+		<footer>
+			<p>Copyright © 2020 Vincent Wong • Looking for software roles in Sydney</p>
+		</footer>
 	</body>
 </html>
