Fix demo link for Huffman Encoding

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 					<div class="project-item">
 						<h3>Huffman Encoding</h3>
-						<a class="demo-link" href="https://github.com/V-Wong/Huffman-Encoding">Live Demo</a>
+						<a class="demo-link" href="https://v-wong.github.io/Huffman-Encoding">Live Demo</a>
 						<a class="repo-link" href="https://github.com/V-Wong/Huffman-Encoding">Respository</a>
 						<img class="project-image" src="https://github.com/V-Wong/Huffman-Encoding/raw/master/screenshot.png?raw=true">
 						<ul>
