Update title and add more meta tags

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Vincent Wong</title>
+		<title>Portfolio | Vincent Wong - Aspiring Web Developer</title>
+		<meta name="Description" content="Aspiring full stack web developer based in Sydney, Australia.
+										  Current student of Computer Science and Mathematics at UNSW.">
+		<meta name="author" content="Vincent Wong">
 		<link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="font-styling.css">
 		<link rel="stylesheet" href="styles.css">
