Add alt text to images

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 		<div class="container">
 				<header>
 					<div class="profile-image-container">
-						<img class="profile-image" src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png">
+						<img class="profile-image" src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png"
+						 alt="Portrait of Vincent Wong">
 					</div>
 					<h1>Vincent Wong</h1>
 					<nav class="links-container">
@@ -42,7 +43,8 @@
 						<h3>Twist The Web Clone</h3>
 						<a class="demo-link" href="https://ttw-clone.herokuapp.com/">Live Demo</a>
 						<a class="repo-link" href="https://github.com/V-Wong/TTW-Clone">Repository</a>
-						<img class="project-image" src="https://github.com/V-Wong/TTW-Clone/raw/master/cover.png">
+						<img class="project-image" src="https://github.com/V-Wong/TTW-Clone/raw/master/cover.png"
+						 alt="Website with Rubiks cube, chatroom and timer">
 						<ul>
 							<li>
 								A web based social speedsolving website based on the now defunct Twist The Web.
@@ -66,7 +68,8 @@
 					<div class="project-item">
 						<h3>CubeSim</h3>
 						<a class="repo-link" href="https://github.com/V-Wong/CubeSim">Respository</a>
-						<img class="project-image" src="https://raw.githubusercontent.com/V-Wong/CubeSim/master/cover.png">
+						<img class="project-image" src="https://raw.githubusercontent.com/V-Wong/CubeSim/master/cover.png"
+						 alt="2D rendering of a Rubiks cube">
 						<ul>
 							<li>
 								A Rubiks cube simulation and solving tool.
@@ -87,7 +90,8 @@
 						<h3>Huffman Encoding</h3>
 						<a class="demo-link" href="https://v-wong.github.io/Huffman-Encoding">Live Demo</a>
 						<a class="repo-link" href="https://github.com/V-Wong/Huffman-Encoding">Respository</a>
-						<img class="project-image" src="https://github.com/V-Wong/Huffman-Encoding/raw/master/screenshot.png?raw=true">
+						<img class="project-image" src="https://github.com/V-Wong/Huffman-Encoding/raw/master/screenshot.png?raw=true"
+						 alt="Binary tree formed by Huffman encoding algorithm">
 						<ul>
 							<li>
 								A web based visualisation tool for the Huffman Encoding algorithm.
@@ -109,7 +113,8 @@
 						<h3>Projectile Simulator</h3>
 						<a class="demo-link" href="https://v-wong.github.io/Projectile-Simulator/">Live Demo</a>
 						<a class="repo-link" href="https://github.com/V-Wong/Projectile-Simulator">Respository</a>
-						<img class="project-image" src="https://v-wong.github.io/img/tanks.png">
+						<img class="project-image" src="https://v-wong.github.io/img/tanks.png"
+						 alt="Cartoon tank on grass aiming towards target">
 						<ul>
 							<li>
 								A web based projectile simulation tool based on the motion of a tank missile.
