Add technology tags

--- a/index.html
+++ b/index.html
@@ -47,22 +47,22 @@
 						 alt="Website with Rubiks cube, chatroom and timer">
 						<ul>
 							<li>
-								A web based social speedsolving website based on the now defunct Twist The Web.
+								Web based social speedsolving website.
 							</li>
 							<li>
-								Allows users to join lobbies in which all users in a given lobby are given a scramble
-								on the Rubiks Cube.
+								Allows users to join lobbies and compete in speedsolving races.
 							</li>
 							<li>
-								Users can time their solves and the solves are sent back to the lobby and shared with users.
+								Each lobby includes a chatroom for users to discuss their solves in.
 							</li>
 							<li>
-								Each lobby includes a chatroom for which users can discuss their solves in.
-							</li>
-							<li>
-								Backend built in Python with Flask-Socketio and using MongoDB. Frontend built in Typescript with React.
+								Backend built in Python with Flask-Socketio. Frontend built in Typescript with React.
 							</li>
 						</ul>
+						<span class="tag">Typescript</span>
+						<span class="tag">Python-Flask</span>
+						<span class="tag">SocketIO</span>
+						<span class="tag">MongoDB</span>
 					</div>
 
 					<div class="project-item">
@@ -84,6 +84,8 @@
 								Built in Python with Pygame for visuals and controls.
 							</li>
 						</ul>
+						<span class="tag">Python</span>
+						<span class="tag">Pygame</span>
 					</div>
 
 					<div class="project-item">
@@ -94,7 +96,7 @@
 						 alt="Binary tree formed by Huffman encoding algorithm">
 						<ul>
 							<li>
-								A web based visualisation tool for the Huffman Encoding algorithm.
+								Web based visualisation tool for the Huffman Encoding algorithm.
 							</li>
 							<li>
 								Accepts user input for the probability of given symbols and generates
@@ -107,6 +109,8 @@
 								Built in Javascript with the use of HTML5 Canvas for visuals.
 							</li>
 						</ul>
+						<span class="tag">Javascript</span>
+						<span class="tag">Canvas</span>
 					</div>
 
 					<div class="project-item">
@@ -130,6 +134,8 @@
 								Built in Javascript with the use of HTML5 Canvas for visuals.
 							</li>
 						</ul>
+						<span class="tag">Javascript</span>
+						<span class="tag">Canvas</span>
 					</div>
 				</section>
 		</div>
