Add subheadings to projects

--- a/index.html
+++ b/index.html
@@ -41,14 +41,12 @@
 				<section class="project-container">
 					<div class="project-item">
 						<h3>Twist The Web Clone</h3>
+						<h4 class="project-subheading">Web based social speedsolving website</h4>
 						<a class="demo-link" href="https://ttw-clone.herokuapp.com/">Live Demo</a>
 						<a class="repo-link" href="https://github.com/V-Wong/TTW-Clone">Repository</a>
 						<img class="project-image" src="https://github.com/V-Wong/TTW-Clone/raw/master/cover.png"
 						 alt="Website with Rubiks cube, chatroom and timer">
 						<ul>
-							<li>
-								Web based social speedsolving website.
-							</li>
 							<li>
 								Allows users to join lobbies and compete in speedsolving races.
 							</li>
@@ -67,13 +65,11 @@
 
 					<div class="project-item">
 						<h3>CubeSim</h3>
+						<h4 class="project-subheading">Rubiks cube simulation and solving tool</h4>
 						<a class="repo-link" href="https://github.com/V-Wong/CubeSim">Respository</a>
 						<img class="project-image" src="https://raw.githubusercontent.com/V-Wong/CubeSim/master/cover.png"
 						 alt="2D rendering of a Rubiks cube">
 						<ul>
-							<li>
-								A Rubiks cube simulation and solving tool.
-							</li>
 							<li>
 								Gives users keyboard control of the cube with a 2D rendering of the faces.
 							</li>
@@ -90,14 +86,12 @@
 
 					<div class="project-item">
 						<h3>Huffman Encoding</h3>
+						<h4 class="project-subheading">Web based visualisation tool for the Huffman Encoding algorithm</h4>
 						<a class="demo-link" href="https://v-wong.github.io/Huffman-Encoding">Live Demo</a>
 						<a class="repo-link" href="https://github.com/V-Wong/Huffman-Encoding">Respository</a>
 						<img class="project-image" src="https://github.com/V-Wong/Huffman-Encoding/raw/master/screenshot.png?raw=true"
 						 alt="Binary tree formed by Huffman encoding algorithm">
 						<ul>
-							<li>
-								Web based visualisation tool for the Huffman Encoding algorithm.
-							</li>
 							<li>
 								Accepts user input for the probability of given symbols and generates
 								the Huffman Tree formed and the encoding of the symbols.
@@ -115,14 +109,12 @@
 
 					<div class="project-item">
 						<h3>Projectile Simulator</h3>
+						<h4 class="project-subheading">Web based projectile simulation tool</h4>
 						<a class="demo-link" href="https://v-wong.github.io/Projectile-Simulator/">Live Demo</a>
 						<a class="repo-link" href="https://github.com/V-Wong/Projectile-Simulator">Respository</a>
 						<img class="project-image" src="https://v-wong.github.io/img/tanks.png"
 						 alt="Cartoon tank on grass aiming towards target">
 						<ul>
-							<li>
-								A web based projectile simulation tool based on the motion of a tank missile.
-							</li>
 							<li>
 								Users can use the keyboard controls to move their tank and adjust the power and
 								angle of their missile shot.
