Add .webp format project images

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<h4 class="project-subheading">Web based social speedsolving website</h4>
 						<a class="demo-link" href="https://ttw-clone.herokuapp.com/">Live Demo</a>
 						<a class="repo-link" href="https://github.com/V-Wong/TTW-Clone">Repository</a>
-						<img class="project-image" src="https://github.com/V-Wong/TTW-Clone/raw/master/cover.png"
+						<img class="project-image" src="./images/ttw.webp"
 						 alt="Website with Rubiks cube, chatroom and timer">
 						<ul>
 							<li>
@@ -67,7 +67,7 @@
 						<h3>CubeSim</h3>
 						<h4 class="project-subheading">Rubiks cube simulation and solving tool</h4>
 						<a class="repo-link" href="https://github.com/V-Wong/CubeSim">Respository</a>
-						<img class="project-image" src="https://raw.githubusercontent.com/V-Wong/CubeSim/master/cover.png"
+						<img class="project-image" src="./images/cube.webp"
 						 alt="2D rendering of a Rubiks cube">
 						<ul>
 							<li>
@@ -89,7 +89,7 @@
 						<h4 class="project-subheading">Web based visualisation tool for the Huffman Encoding algorithm</h4>
 						<a class="demo-link" href="https://v-wong.github.io/Huffman-Encoding">Live Demo</a>
 						<a class="repo-link" href="https://github.com/V-Wong/Huffman-Encoding">Respository</a>
-						<img class="project-image" src="https://github.com/V-Wong/Huffman-Encoding/raw/master/screenshot.png?raw=true"
+						<img class="project-image" src="./images/huffman.webp"
 						 alt="Binary tree formed by Huffman encoding algorithm">
 						<ul>
 							<li>
@@ -112,7 +112,7 @@
 						<h4 class="project-subheading">Web based projectile simulation tool</h4>
 						<a class="demo-link" href="https://v-wong.github.io/Projectile-Simulator/">Live Demo</a>
 						<a class="repo-link" href="https://github.com/V-Wong/Projectile-Simulator">Respository</a>
-						<img class="project-image" src="https://v-wong.github.io/img/tanks.png"
+						<img class="project-image" src="./images/tanks.webp"
 						 alt="Cartoon tank on grass aiming towards target">
 						<ul>
 							<li>
