Refactor CSS with Sass

--- a/index.html
+++ b/index.html
@@ -7,16 +7,13 @@
 		<meta name="author" content="Vincent Wong">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
-		<link rel="stylesheet" href="font-styling.css">
 		<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
 		<div class="container">
-				<header>
-					<div class="profile-image-container">
-						<img class="profile-image" src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png"
-						 alt="Portrait of Vincent Wong">
-					</div>
+				<header class="profile">
+					<img class="profile image" src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png"
+				     alt="Portrait of Vincent Wong">
 					<h1>Vincent Wong</h1>
 					<nav class="links-container">
 						<a href="https://github.com/V-Wong">Github</a>
@@ -38,13 +35,13 @@
 
 				<h2>Projects</h2>
 				<hr>
-				<section class="project-container">
-					<div class="project-item">
+				<section class="projects">
+					<div class="project">
 						<h3>Twist The Web Clone</h3>
 						<h4 class="project-subheading">Web based social speedsolving website</h4>
 						<a class="demo-link" href="https://ttw-clone.herokuapp.com/">Live Demo</a>
 						<a class="repo-link" href="https://github.com/V-Wong/TTW-Clone">Repository</a>
-						<img class="project-image" src="./images/ttw.webp"
+						<img class="image" src="./images/ttw.webp"
 						 alt="Website with Rubiks cube, chatroom and timer">
 						<ul>
 							<li>
@@ -63,11 +60,11 @@
 						<span class="tag">MongoDB</span>
 					</div>
 
-					<div class="project-item">
+					<div class="project">
 						<h3>CubeSim</h3>
 						<h4 class="project-subheading">Rubiks cube simulation and solving tool</h4>
 						<a class="repo-link" href="https://github.com/V-Wong/CubeSim">Respository</a>
-						<img class="project-image" src="./images/cube.webp"
+						<img class="image" src="./images/cube.webp"
 						 alt="2D rendering of a Rubiks cube">
 						<ul>
 							<li>
@@ -84,12 +81,12 @@
 						<span class="tag">Pygame</span>
 					</div>
 
-					<div class="project-item">
+					<div class="project">
 						<h3>Huffman Encoding</h3>
 						<h4 class="project-subheading">Web based visualisation tool for the Huffman Encoding algorithm</h4>
 						<a class="demo-link" href="https://v-wong.github.io/Huffman-Encoding">Live Demo</a>
 						<a class="repo-link" href="https://github.com/V-Wong/Huffman-Encoding">Respository</a>
-						<img class="project-image" src="./images/huffman.webp"
+						<img class="image" src="./images/huffman.webp"
 						 alt="Binary tree formed by Huffman encoding algorithm">
 						<ul>
 							<li>
@@ -107,12 +104,12 @@
 						<span class="tag">Canvas</span>
 					</div>
 
-					<div class="project-item">
+					<div class="project">
 						<h3>Projectile Simulator</h3>
 						<h4 class="project-subheading">Web based projectile simulation tool</h4>
 						<a class="demo-link" href="https://v-wong.github.io/Projectile-Simulator/">Live Demo</a>
 						<a class="repo-link" href="https://github.com/V-Wong/Projectile-Simulator">Respository</a>
-						<img class="project-image" src="./images/tanks.webp"
+						<img class="image" src="./images/tanks.webp"
 						 alt="Cartoon tank on grass aiming towards target">
 						<ul>
 							<li>
