Rewrite project descriptions

--- a/index.html
+++ b/index.html
@@ -90,8 +90,7 @@
 						 alt="Binary tree formed by Huffman encoding algorithm">
 						<ul>
 							<li>
-								Accepts user input for the probability of given symbols and generates
-								the Huffman Tree formed and the encoding of the symbols.
+								Generates a Huffman tree based on user symbol input.
 							</li>
 							<li>
 								A specific encoding can be selected and the traceback of the encoding path drawn.
@@ -113,8 +112,7 @@
 						 alt="Cartoon tank on grass aiming towards target">
 						<ul>
 							<li>
-								Users can use the keyboard controls to move their tank and adjust the power and
-								angle of their missile shot.
+								Simulates projectile motion based on controlling the shot of a tank.
 							</li>
 							<li>
 								A moving target is also featured in which the user can shoot to score points.
