Update title text for projects section

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					</blockquote>
 				</header>
 
-				<h2>Projects</h2>
+				<h2>Personal Projects</h2>
 				<hr>
 				<section class="projects">
 					<div class="project">
