Add collaborative projects section

--- a/index.html
+++ b/index.html
@@ -33,10 +33,40 @@
 					</blockquote>
 				</header>
 
-				<h2>Personal Projects</h2>
+				<h2>Collaborative Projects</h2>
 				<hr>
-				<section class="projects">
-					<div class="project">
+				<section class="collab-projects">
+					<div class="card">
+						<div class="description">
+							<h3>LinkUp - UNSW Events Tracker</h3>
+							<h4 class="project-subheading">Frontend developer</h4>
+							<a class="demo-link" href="https://linkup.website/">Live Demo</a>
+						</div>
+						<div class="image-container">
+							<img class="image" src="https://www.arc.unsw.edu.au/generated/200/linkup-logo-png.png?1583464593">
+						</div>
+						<div class="dotpoints">
+							<ul>
+								<li>
+									A centralised source of society events across UNSW.
+								</li>
+								<li>
+									Aims to help help students discover new societies, and consequently
+									allows societies to gain exposure.
+								</li>
+							</ul>
+						</div>
+						<div class="tags">
+							<span class="tag">React</span>
+							<span class="tag">Bootstrap</span>
+						</div>
+					</div>
+				</section>
+
+				<h2 style="margin-top: 2vh;">Personal Projects</h2>
+				<hr>
+				<section class="personal-projects">
+					<div class="card">
 						<h3>Twist The Web Clone</h3>
 						<h4 class="project-subheading">Web based social speedsolving website</h4>
 						<a class="demo-link" href="https://ttw-clone.herokuapp.com/">Live Demo</a>
@@ -60,7 +90,7 @@
 						<span class="tag">MongoDB</span>
 					</div>
 
-					<div class="project">
+					<div class="card">
 						<h3>CubeSim</h3>
 						<h4 class="project-subheading">Rubiks cube simulation and solving tool</h4>
 						<a class="repo-link" href="https://github.com/V-Wong/CubeSim">Respository</a>
@@ -81,7 +111,7 @@
 						<span class="tag">Pygame</span>
 					</div>
 
-					<div class="project">
+					<div class="card">
 						<h3>Huffman Encoding</h3>
 						<h4 class="project-subheading">Web based visualisation tool for the Huffman Encoding algorithm</h4>
 						<a class="demo-link" href="https://v-wong.github.io/Huffman-Encoding">Live Demo</a>
@@ -103,7 +133,7 @@
 						<span class="tag">Canvas</span>
 					</div>
 
-					<div class="project">
+					<div class="card">
 						<h3>Projectile Simulator</h3>
 						<h4 class="project-subheading">Web based projectile simulation tool</h4>
 						<a class="demo-link" href="https://v-wong.github.io/Projectile-Simulator/">Live Demo</a>
