Improve mobile compatibility

--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
 							Interested in full stack web development and mobile app development.
 						</p>
 						<p>
-							Expererienced in programming with Javascript (Typescript) and Python.
+							Experienced in programming with Javascript (Typescript) and Python.
+						</p>
+						<p>
+							Looking for software roles in Sydney.
 						</p>
 					</blockquote>
 				</header>
@@ -85,7 +88,6 @@
 							</li>
 						</ul>
 						<span class="tag">Typescript</span>
-						<span class="tag">Python-Flask</span>
 						<span class="tag">SocketIO</span>
 						<span class="tag">MongoDB</span>
 					</div>
@@ -157,7 +159,7 @@
 				</section>
 		</div>
 		<footer>
-			<p>Copyright © 2020 Vincent Wong • Looking for software roles in Sydney</p>
+			<p>Copyright © 2020 Vincent Wong</p>
 		</footer>
 	</body>
 </html>
