Add extracurriculars section

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 				<h2>Collaborative Projects</h2>
 				<hr>
-				<section class="collab-projects">
+				<section class="single-column">
 					<div class="card">
 						<div class="description">
 							<h3>LinkUp - UNSW Events Tracker</h3>
@@ -47,7 +47,7 @@
 							<a class="demo-link" href="https://linkup.website/">Live Demo</a>
 						</div>
 						<div class="image-container">
-							<img class="image" src="https://www.arc.unsw.edu.au/generated/200/linkup-logo-png.png?1583464593">
+							<img class="image" src="https://www.arc.unsw.edu.au/generated/200/linkup-logo-png.png?1583464593" style="transform: scale(1.25);">
 						</div>
 						<div class="dotpoints">
 							<ul>
@@ -69,7 +69,7 @@
 
 				<h2 style="margin-top: 2vh;">Personal Projects</h2>
 				<hr>
-				<section class="personal-projects">
+				<section class="two-column">
 					<div class="card">
 						<h3>Twist The Web Clone</h3>
 						<h4 class="project-subheading">Web based social speedsolving website</h4>
@@ -156,6 +156,36 @@
 						</ul>
 						<span class="tag">Javascript</span>
 						<span class="tag">Canvas</span>
+					</div>
+				</section>
+
+				<h2 style="margin-top: 3.25vh;">Extracurriculars</h2>
+				<hr>
+				<section class="single-column">
+					<div class="card">
+						<div class="description">
+							<h3>UNSW Rubik Society</h3>
+							<h4 class="project-subheading">Executive - Events Director</h4>
+							<a class="demo-link" href="https://www.facebook.com/UNSWRubikSoc/">Society Page</a>
+						</div>
+						<div class="image-container">
+							<img class="image" src="./images/rubiksoc.webp" style="transform: scale(1.25);">
+						</div>
+						<div class="dotpoints">
+							<ul>
+								<li>
+									Help organise Rubik's Cube speedsolving tutorials and unofficial competitions at UNSW.
+								</li>
+								<li>
+									Encourage existing cubers to develop their skills while helping new cubers find a new interest
+									and hobby in speedsolving.
+								</li>
+							</ul>
+						</div>
+						<div class="tags">
+							<span class="tag">Rubiks Cubes</span>
+							<span class="tag">Speedsolving</span>
+						</div>
 					</div>
 				</section>
 		</div>
