Improve sizing of images

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 							<a class="demo-link" href="https://linkup.website/">Live Demo</a>
 						</div>
 						<div class="image-container">
-							<img class="image" src="https://www.arc.unsw.edu.au/generated/200/linkup-logo-png.png?1583464593" style="transform: scale(1.25);">
+							<img class="image" src="./images/linkup.webp">
 						</div>
 						<div class="dotpoints">
 							<ul>
@@ -169,7 +169,7 @@
 							<a class="demo-link" href="https://www.facebook.com/UNSWRubikSoc/">Society Page</a>
 						</div>
 						<div class="image-container">
-							<img class="image" src="./images/rubiksoc.webp" style="transform: scale(1.25);">
+							<img class="image" src="./images/rubiksoc.webp">
 						</div>
 						<div class="dotpoints">
 							<ul>
