Update about-me section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 						<a href="https://www.linkedin.com/in/vincent-wc-wong/">LinkedIn</a>
 						<a href="mailto:v.wong168@outlook.com">Email</a>
 					</nav>
-					<blockquote class="about-me">
+					<blockquote class="about-me card">
+						<h3>About Me</h3>
 						<p>
 							Student of Computer Science and Mathematics at the University of New South Wales in Sydney.
 						</p>
@@ -32,7 +33,8 @@
 							Experienced in programming with Javascript (Typescript) and Python.
 						</p>
 						<p>
-							Looking for software roles in Sydney.
+							Also avid speedcuber with <a href="https://www.worldcubeassociation.org/persons/2014wong08?tab=championship-podiums">podiums</a> 
+							in Australian national championships and held a <a href="https://www.worldcubeassociation.org/results/rankings/333oh/average?years=only+2018">former world top 10 ranking.</a>
 						</p>
 					</blockquote>
 				</header>
