Update project descriptions

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
 					<div class="card">
 						<h3>Huffman Encoding</h3>
-						<h4 class="project-subheading">Web based visualisation tool for the Huffman Encoding algorithm</h4>
+						<h4 class="project-subheading">Huffman Encoding visualisation tool</h4>
 						<a class="demo-link" href="https://v-wong.github.io/Huffman-Encoding">Live Demo</a>
 						<a class="repo-link" href="https://github.com/V-Wong/Huffman-Encoding">Respository</a>
 						<img class="image" src="./images/huffman.webp"
@@ -128,7 +128,7 @@
 								Generates a Huffman tree based on user symbol input.
 							</li>
 							<li>
-								A specific encoding can be selected and the traceback of the encoding path drawn.
+								Specific encoding can be selected and traceback of the encoding path drawn.
 							</li>
 							<li>
 								Built in Javascript with the use of HTML5 Canvas for visuals.
