Add resume to profile

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 					<h1>Vincent Wong</h1>
 					<nav class="links-container">
 						<a href="https://github.com/V-Wong">Github</a>
+						<a href="https://drive.google.com/file/d/10xEX7QGZpHkkvXxH7JiHdGAk76DYtOpT/view?usp=sharing">Resume</a>
 						<a href="https://www.linkedin.com/in/vincent-wc-wong/">LinkedIn</a>
 						<a href="mailto:v.wong168@outlook.com">Email</a>
 					</nav>
