--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
 						</div>
 					</div>
 				</section>
+				<div class="modal"></div>
 		</div>
 		<footer>
 			<p>Copyright © 2020 Vincent Wong</p>
@@ -211,6 +212,29 @@
 						isDarkTheme ? "./images/sun.svg" : "./images/moon.svg";
 				isDarkTheme = !isDarkTheme;
 			})
+
+			const createModal = () => {
+				const modal = document.getElementsByClassName("modal")[0];
+				[...document.getElementsByClassName("card")].map(card => {
+					card.addEventListener("click", event => {
+						let element = event.target;
+						while (![...element.classList].includes("card")) element = element.parentElement;
+						modal.style.display = "block";
+						const content = element.cloneNode(true);
+						content.classList.add("content");
+						modal.appendChild(content);
+					})
+				})
+
+				document.body.addEventListener("click", event => {
+					if (event.target === modal) {
+						modal.style.display = "none";
+						modal.removeChild(modal.firstChild);
+					}
+				})
+			}
+
+			createModal();
 		</script>
 	</body>
 </html>
